# EasyTgBot

./: .gitignore  LICENSE  README.md  pyproject.toml
easy_tg_bot/: __init__.py  admin.py  app.py  cli.py  decorators.py  error.py  file_handler.py  mail_users_conv.py  manage_role_conv.py  mylogging.py  put_file_conv.py  put_intro_video_conv.py  roles.py  send.py  send_with_navigation.py  settings.py  srv.py  start.py  superadmin.py  text_handler.py  user.py  validate_text_file.py  video_handler.py
easy_tg_bot/utils/: context_logic.py  init_templates.py  run_docker_polling.py  run_docker_webhook.py  utils.py
easy_tg_bot/utils/templates/: .dockerignore  .env  .gitignore  Dockerfile  deploy.yml  docker-compose.yml  main.py  settings.py  text.xlsx
