[tool.poetry]
name = "easy-tg-bot"
version = "0.3.0"
description = "My Telegram Framework"
authors = ["ani <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.4"
aiofiles = "^24.1.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
click = "^8.1.7"
pyyaml = "^6.0.2"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
easy-tg-bot = "easy_tg_bot.cli:cli"
srv = "easy_tg_bot.srv:srv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
